Overflow fixes.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-    overflow: hidden;
+    overflow-y: hidden;
 }
 
 body {
@@ -118,7 +118,7 @@ body {
 
 
 #projects-container {
-    width: 1000px;
+    max-width: 1000px;
     display: flex;
     gap: 2rem;
     justify-content: center;
